--- a/al.css
+++ b/al.css
@@ -7,6 +7,12 @@ html, body { width:100%; height:100%; margin:0; background-color:#FFFFFF; font-s
 #container #content h1 > span { white-space:nowrap; }
 #container #content h1 > span > a { font-weight:normal; }
 #container #content h1 > span > span { color:#CFCFCF; }
+#container #content h3 > span > span { white-space:nowrap; font-size:1rem; }
+#container #content h3 > span > span > a { font-weight:normal; }
+#container #content h3 > span > span > span { color:#CFCFCF; }
+#container #content legend > span { white-space:nowrap; font-size:0.9rem; }
+#container #content legend > span > a { font-weight:normal; }
+#container #content legend > span > span { color:#CFCFCF; }
 #container #content div { display:block; margin-bottom:5px; }
 #container #content div > p { margin:3px 0px 0px 0px; }
 #container #content div > p:last-of-type { margin:3px 0px 25px 0px; }
